--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "subscribed-app",
   "private": true,
   "workspaces": [
+    "api",
     "expo",
     "next",
     "packages/*"
@@ -13,7 +14,9 @@
     "postinstall": "yarn build",
     "build": "yarn workspaces foreach --exclude next-app -pi run build",
     "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader",
-    "sync:tamagui": "${TAMAGUI_PATH:-$HOME/tamagui}/starters-sync.sh"
+    "sync:tamagui": "${TAMAGUI_PATH:-$HOME/tamagui}/starters-sync.sh",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix"
   },
   "resolutions": {
     "cacache": "16.0.7",
@@ -26,10 +29,13 @@
     "@manypkg/cli": "^0.19.1",
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.67.2",
-    "eslint": "^8.11.0",
+    "eslint": "^8.19.0",
     "prettier": "^2.6.2",
     "turbo": "^1.1.6",
     "typescript": "^4.6.3"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "dependencies": {
+    "eslint-plugin-prettier": "latest"
+  }
 }
