--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
   },
   "devDependencies": {
     "@manypkg/cli": "^0.19.1",
+    "@next/eslint-plugin-next": "^12.2.0",
     "@types/react": "^17.0.39",
     "@types/react-native": "^0.67.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
     "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.6.2",
     "turbo": "^1.1.6",
     "typescript": "^4.6.3"
   },
-  "packageManager": "yarn@3.2.0",
-  "dependencies": {
-    "eslint-plugin-prettier": "latest"
-  }
+  "packageManager": "yarn@3.2.0"
 }
