--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "graphql": "^14.5.8",
     "graphql-scalars": "^1.17.0",
     "graphql-tag": "^2.10.1",
-    "json5": "^2.1.0"
+    "json5": "^2.1.0",
+    "nanoid": "^4.0.0"
   }
 }
