--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -9,6 +9,8 @@ logFilters:
     level: discard
   - code: YN0076
     level: discard
+  - code: YN0013
+    level: discard
 
 nodeLinker: node-modules
 
@@ -16,4 +18,4 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
 
-yarnPath: .yarn/releases/yarn-3.2.0.cjs
+yarnPath: .yarn/releases/yarn-3.2.3.cjs
