--- a/package.json
+++ b/package.json
@@ -2,43 +2,39 @@
   "name": "subscribed-app",
   "private": true,
   "workspaces": [
-    "api",
-    "expo",
-    "next",
-    "packages/*"
+    "apps/*",
+    "packages/*",
+    "api"
   ],
   "scripts": {
-    "native": "yarn build && cd expo && yarn start",
-    "web": "yarn build && cd next && yarn next",
+    "native": "yarn build && cd apps/expo && yarn start",
+    "web": "yarn build && cd apps/next && yarn next",
+    "web:prod": "yarn workspace next-app build",
     "watch": "yarn workspaces foreach -pi run watch",
     "postinstall": "yarn build",
     "build": "yarn workspaces foreach --exclude next-app -pi run build",
-    "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader",
-    "sync:tamagui": "${TAMAGUI_PATH:-$HOME/tamagui}/starters-sync.sh",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix"
+    "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader"
   },
   "resolutions": {
-    "cacache": "16.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-refresh": "0.11.0",
-    "react-native-web": "0.17.7"
+    "esbuild": "0.15.6",
+    "@types/react": "17.0.21",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-refresh": "^0.14.0",
+    "react-native-web": "0.18.6"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.18.9",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@manypkg/cli": "^0.19.1",
-    "@next/eslint-plugin-next": "^12.2.0",
-    "@types/react": "^17.0.39",
-    "@types/react-native": "^0.67.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "eslint": "^8.19.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-next": "^0.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.6.2",
-    "turbo": "^1.1.6",
-    "typescript": "^4.6.3"
+    "@types/react": "^18.0.15",
+    "@types/react-native": "^0.69.5",
+    "eslint": "^8.21.0",
+    "prettier": "^2.7.1",
+    "turbo": "^1.4.2",
+    "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.3"
 }
