--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,18 +3,18 @@
   "name": "app",
   "main": "index.ts",
   "dependencies": {
+    "@my/config": "*",
     "@my/ui": "*",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "@tamagui/animations-reanimated": "1.0.1-beta.65",
-    "@tamagui/colors": "1.0.1-beta.65",
-    "@tamagui/drawer": "1.0.1-beta.65",
-    "@tamagui/feather-icons": "1.0.1-beta.65",
-    "@tamagui/font-inter": "1.0.1-beta.65",
-    "@tamagui/shorthands": "1.0.1-beta.65",
-    "@tamagui/theme-base": "1.0.1-beta.65",
-    "expo-linking": "^3.0.0",
-    "solito": "^0.0.25"
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@tamagui/animations-react-native": "1.0.1-beta.191",
+    "@tamagui/colors": "1.0.1-beta.191",
+    "@tamagui/feather-icons": "1.0.1-beta.191",
+    "@tamagui/font-inter": "1.0.1-beta.190",
+    "@tamagui/shorthands": "1.0.1-beta.191",
+    "@tamagui/theme-base": "1.0.1-beta.191",
+    "expo-linking": "^3.2.2",
+    "solito": "^0.0.26"
   },
   "sideEffects": false
 }
