--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,12 +18,10 @@
     "watch": "tamagui-build --watch"
   },
   "dependencies": {
-    "@tamagui/use-debounce": "^1.0.1-beta.65",
-    "@tamagui/use-force-update": "^1.0.1-beta.65",
-    "@tamagui/use-window-size": "^1.0.1-beta.65",
-    "tamagui": "^1.0.1-beta.65"
+    "@my/config": "*",
+    "tamagui": "^1.0.1-beta.191"
   },
   "devDependencies": {
-    "@tamagui/build": "^1.0.1-beta.65"
+    "@tamagui/build": "^1.0.1-beta.191"
   }
 }
