--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.18.9",
-    "@expo/webpack-config": "^0.17.0"
+    "@expo/webpack-config": "^0.17.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@manypkg/cli": "^0.19.1",
