--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "node src/server.js"
+    "server": "nodemon src/server.js"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
@@ -15,5 +15,8 @@
     "graphql-tag": "^2.10.1",
     "json5": "^2.1.0",
     "nanoid": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
