--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
+# prisma
+prisma/dev.db
 
 # vercel
 .vercel
