--- a/api/package.json
+++ b/api/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
