--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.6'
 services: 
   db:
-    image: postgres
+    image: postgres:15
     restart: always
     environment:  
       DATABASE_HOST: ${DATABASE_HOST}
@@ -10,4 +10,4 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
 
     ports: 
-        - "5432:5432" 
+        - "5432:5432"
